Ensure mojo descriptors are extracted after compilation

--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,12 @@
             <goalPrefix>exec</goalPrefix>
             <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
           </configuration>
+          <executions>
+            <execution>
+              <id>default-descriptor</id>
+              <phase>process-classes</phase>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
