--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jdk:
   
 dist: trusty
 
-script: "mvn --show-version --errors --batch-mode -Prun-its clean verify"
+script: "mvn --show-version --errors --batch-mode -Prun-its clean verify javadoc:javadoc"
 cache:
     directories:
     - $HOME/.m2
