--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>exec-maven-plugin</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Exec Maven Plugin</name>
@@ -103,7 +103,7 @@
     <connection>scm:git:https://github.com/mojohaus/exec-maven-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mojohaus/exec-maven-plugin.git</developerConnection>
     <url>https://github.com/mojohaus/exec-maven-plugin</url>
-    <tag>HEAD</tag>
+    <tag>exec-maven-plugin-3.0.0</tag>
   </scm>
 
   <dependencies>
@@ -357,7 +357,7 @@
                 <mockRepo>
                   <source>src/it/mrm/repository</source>
                 </mockRepo>
-                <proxyRepo/>
+                <proxyRepo />
               </repositories>
             </configuration>
           </plugin>
