--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
     <mavenVersion>3.0</mavenVersion>
 
     <slf4j.version>1.7.36</slf4j.version>
+    <project.build.outputTimestamp>2022-01-18T09:14:02Z</project.build.outputTimestamp>
   </properties>
 
   <build>
