fix build - weird java version was upgrade to j8 but not animal sniffer

--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,7 @@
           </signature>
           <ignores>
             <ignore>java.lang.invoke.MethodHandle</ignore>
+            <ignore>java.util.concurrent.ForkJoinPool</ignore>
           </ignores>
         </configuration>
       </plugin>
