--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
       <artifactId>plexus-component-annotations</artifactId>
       <version>2.1.1</version>
       <optional>true</optional>
-	</dependency>
+	  </dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -163,10 +163,21 @@
     </dependency>
 
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.plugin-testing</groupId>
       <artifactId>maven-plugin-testing-harness</artifactId>
-      <version>2.1</version>
+      <version>3.3.0</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.codehaus.plexus</groupId>
+          <artifactId>plexus-container-default</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -195,8 +206,7 @@
   </dependencies>
 
   <properties>
-    <mavenVersion>3.0</mavenVersion>
-
+    <mavenVersion>3.2.5</mavenVersion>
     <slf4j.version>1.7.36</slf4j.version>
     <project.build.outputTimestamp>2022-01-18T09:14:02Z</project.build.outputTimestamp>
   </properties>
@@ -212,21 +222,6 @@
             <detectJavaApiLink>false</detectJavaApiLink>
             <detectOfflineLinks>false</detectOfflineLinks>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-plugin-plugin</artifactId>
-          <version>3.6.4</version>
-          <configuration>
-            <goalPrefix>exec</goalPrefix>
-            <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-          </configuration>
-          <executions>
-            <execution>
-              <id>default-descriptor</id>
-              <phase>process-classes</phase>
-            </execution>
-          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
