--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
       <email>sjaranowski@apache.org</email>
       <timezone>Europe/Warsaw</timezone>
     </developer>
+    <developer>
+      <id>bmarwell</id>
+      <name>Benjamin Marwell</name>
+      <email>bmarwell@apache.org</email>
+      <timezone>Europe/Berlin</timezone>
+    </developer>
   </developers>
 
   <contributors>
