avoid to use implementation maven configuration and use the more exec plugin friendly style of package based configuration classes

--- a/src/test/projects/project18/pom.xml
+++ b/src/test/projects/project18/pom.xml
@@ -38,7 +38,7 @@
             <additionalClasspathElements>../../../../target/test-classes</additionalClasspathElements> <!-- test setup requires it -->
           </additionalClasspathElements>
           <systemProperties>
-            <property implementation="org.codehaus.mojo.exec.Property$Project" />
+            <projectProperties />
           </systemProperties>
         </configuration>
       </plugin>
