Use Resolver Api for dependency resolving
o.a.m.repository.RepositorySystem has only legacy implementation.

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,14 @@
       <version>${mavenVersion}</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-util</artifactId>
+      <!-- bound version with used Maven -->
+      <version>1.0.0.v20140518</version>
+    </dependency>
+
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
