--- a/src/it/projects/mexec-29-wrong-signature/pom.xml
+++ b/src/it/projects/mexec-29-wrong-signature/pom.xml
@@ -40,7 +40,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <executions>
            <execution>
               <phase>test</phase>
