--- a/src/it/projects/mexec-323-force-java/pom.xml
+++ b/src/it/projects/mexec-323-force-java/pom.xml
@@ -18,7 +18,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <executions>
           <execution>
             <phase>compile</phase>
