--- a/src/it/projects/mexec-88/pom.xml
+++ b/src/it/projects/mexec-88/pom.xml
@@ -17,7 +17,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>@pom.version@</version>
+        <version>@project.version@</version>
         <executions>
           <execution>
             <phase>process-classes</phase>
