--- a/pom.xml
+++ b/pom.xml
@@ -139,10 +139,10 @@
     </dependency>
 
     <dependency>
-      <groupId>org.eclipse.aether</groupId>
-      <artifactId>aether-util</artifactId>
+      <groupId>org.apache.maven.resolver</groupId>
+      <artifactId>maven-resolver-util</artifactId>
       <!-- bound version with used Maven -->
-      <version>1.0.0.v20140518</version>
+      <version>1.4.1</version>
     </dependency>
 
     <dependency>
@@ -219,7 +219,7 @@
   </dependencies>
 
   <properties>
-    <mavenVersion>3.2.5</mavenVersion>
+    <mavenVersion>3.6.3</mavenVersion>
     <slf4j.version>1.7.36</slf4j.version>
     <project.build.outputTimestamp>2022-07-15T02:43:45Z</project.build.outputTimestamp>
   </properties>
