--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
   </contributors>
 
   <prerequisites>
-    <maven>${mavenVersion}</maven>
+    <maven>${mavenMinVersion}</maven>
   </prerequisites>
 
   <scm>
@@ -122,7 +122,8 @@
   </scm>
 
   <properties>
-    <mavenVersion>3.6.3</mavenVersion>
+    <mavenMinVersion>3.6.3</mavenMinVersion>
+    <mavenVersion>3.9.6</mavenVersion>
     <recommendedJavaBuildVersion>11</recommendedJavaBuildVersion>
     <slf4j.version>1.7.36</slf4j.version>
     <invoker.parallelThreads>1C</invoker.parallelThreads>
@@ -159,8 +160,7 @@
     <dependency>
       <groupId>org.apache.maven.resolver</groupId>
       <artifactId>maven-resolver-util</artifactId>
-      <!-- bound version with used Maven -->
-      <version>1.4.1</version>
+      <version>1.9.18</version>
     </dependency>
 
     <dependency>
@@ -240,6 +240,16 @@
             <detectLinks>false</detectLinks>
             <detectJavaApiLink>false</detectJavaApiLink>
             <detectOfflineLinks>false</detectOfflineLinks>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <proc>none</proc>
+            <compilerArgs>
+              <compilerArg>-Xlint:deprecation</compilerArg>
+            </compilerArgs>
           </configuration>
         </plugin>
       </plugins>
