Remove unused test
ITs should be in src/it/projects
We have similar tests

--- a/src/it/projects/java_module-mainclass/pom.xml
+++ b/src/it/projects/java_module-mainclass/pom.xml
@@ -27,7 +27,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>@project.version@</version>
         <configuration>
-          <mainClass>com.greetings.Main</mainClass>
+          <mainClass>com.greetings/com.greetings.Main</mainClass>
         </configuration>
       </plugin>
     </plugins>
