--- a/src/it/projects/setup-parent/pom.xml
+++ b/src/it/projects/setup-parent/pom.xml
@@ -86,6 +86,11 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>@maven-resources-plugin.version@</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-toolchains-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
