--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,6 +24,5 @@ jobs:
     name: Verify
     uses: apache/maven-gh-actions-shared/.github/workflows/maven-verify.yml@v3
     with:
-      jdk-matrix: '[ "8", "17", "21" ]'
-      ff-maven: "3.9.5"                              # Maven version for fail-fast-build
-      maven-matrix: '[ "3.6.3", "3.8.8", "3.9.5" ]'  # Maven versions matrix for verify builds
+      ff-maven: "3.9.6"                              # Maven version for fail-fast-build
+      maven-matrix: '[ "3.6.3", "3.9.6", "4.0.0-alpha-12" ]'  # Maven versions matrix for verify builds
