Allow <includePluginDependencies> to be specified for the exec:exec goal

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,16 @@
         <role>Feature Contributor</role>
       </roles>
     </contributor>
+    <contributor>
+      <name>Adam Retter</name>
+      <email>adam@evolvedbinary.com</email>
+      <organization>Evolved Binary</organization>
+      <organizationUrl>https://www.evolvedbinary.com</organizationUrl>
+      <roles>
+        <role>Patch Contributor</role>
+      </roles>
+      <timezone>Europe/London</timezone>
+    </contributor>
   </contributors>
 
   <prerequisites>
