--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>exec-maven-plugin</artifactId>
-  <version>3.4.0</version>
+  <version>3.4.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Exec Maven Plugin</name>
@@ -127,7 +127,7 @@
   <scm>
     <connection>scm:git:https://github.com/mojohaus/exec-maven-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mojohaus/exec-maven-plugin.git</developerConnection>
-    <tag>3.4.0</tag>
+    <tag>HEAD</tag>
     <url>https://github.com/mojohaus/exec-maven-plugin/tree/master</url>
   </scm>
 
@@ -136,7 +136,7 @@
     <slf4j.version>1.7.36</slf4j.version>
     <asm.version>9.7</asm.version>
     <invoker.parallelThreads>1C</invoker.parallelThreads>
-    <project.build.outputTimestamp>2024-08-06T21:31:59Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-08-06T21:32:24Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
