--- a/src/it/projects/setup-parent/pom.xml
+++ b/src/it/projects/setup-parent/pom.xml
@@ -109,7 +109,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-toolchains-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>@maven-toolchains-plugin.version@</version>
         </plugin>
       </plugins>
     </pluginManagement>
