--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,13 @@
             <detectOfflineLinks>false</detectOfflineLinks>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <rerunFailingTestsCount>2</rerunFailingTestsCount>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
 
