--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
   </contributors>
 
   <prerequisites>
-    <maven>${mavenVersion}</maven>
+    <maven>3.6.3</maven>
   </prerequisites>
 
   <scm>
@@ -132,7 +132,8 @@
   </scm>
 
   <properties>
-    <mavenVersion>3.6.3</mavenVersion>
+    <mavenVersion>3.9.11</mavenVersion>
+    <minimalMavenBuildVersion>3.6.3</minimalMavenBuildVersion>
     <slf4j.version>1.7.36</slf4j.version>
     <asm.version>9.8</asm.version>
     <invoker.parallelThreads>1C</invoker.parallelThreads>
@@ -171,7 +172,7 @@
       <groupId>org.apache.maven.resolver</groupId>
       <artifactId>maven-resolver-util</artifactId>
       <!-- bound version with used Maven -->
-      <version>1.4.1</version>
+      <version>1.9.24</version>
     </dependency>
 
     <dependency>
