#426 Add JPMS module support with ServiceLoader
**Note:** This is not a complete solution as handling of JDK 8
compatibility is outstanding. Currently, the fix would break
usage of JDK 8.

Enable `exec:java`-goal to execute Java applications using the Java
Platform Module System (JPMS) with proper ServiceLoader support.

Changes:
- Split execution logic into classpath and module-path modes
- Detect module syntax (module/class) in mainClass parameter
- Create ModuleLayer with resolveAndBind() to include service providers
- Use ModuleLayer.Controller to open packages for reflective access
- Set thread context classloader to module's classloader

The plugin now properly handles:
- Module-path execution when `mainClass` uses "module/class" syntax
- ServiceLoader provider discovery and binding in modular applications
- Reflective access to main methods in unexported packages
- Mixed module and classpath dependencies

Integration test mexec-gh-426 validates the ServiceLoader functionality
with a multi-module JPMS application (contract, provider, consumer).

Technical implementation:
- Use Configuration.resolveAndBind() instead of resolve() to include
  service providers declared with "uses" in module-info
- Obtain ModuleLayer.Controller to programmatically open packages via
  addOpens() for reflective main method invocation
- Load classes through the module layer's ClassLoader to maintain
  proper module isolation and visibility

The fix was created in the course of support-and-care/maven-support-and-care#138.

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
     <invoker.parallelThreads>1C</invoker.parallelThreads>
     <project.build.outputTimestamp>2025-10-05T19:10:54Z</project.build.outputTimestamp>
     <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
+
+    <mojo.java.target>9</mojo.java.target>
   </properties>
 
   <dependencies>
@@ -286,6 +288,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <proc>none</proc>
+          <source>9</source>
+          <target>9</target>
         </configuration>
         <executions>
           <execution>
@@ -305,6 +309,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
         <configuration>
+          <skip>true</skip>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
             <artifactId>java18</artifactId>
