[maven-release-plugin] prepare release 3.1.2

--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
   <scm>
     <connection>scm:git:https://github.com/mojohaus/exec-maven-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mojohaus/exec-maven-plugin.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>3.1.2</tag>
     <url>https://github.com/mojohaus/exec-maven-plugin/tree/master</url>
   </scm>
 
@@ -139,7 +139,6 @@
     <invoker.parallelThreads>1C</invoker.parallelThreads>
     <project.build.outputTimestamp>2025-10-05T19:10:54Z</project.build.outputTimestamp>
     <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
-
     <mojo.java.target>8</mojo.java.target>
   </properties>
 
